Fix: Alignment of Livestream banner;

--- a/src/components/globals/banner/_banner.scss
+++ b/src/components/globals/banner/_banner.scss
@@ -23,9 +23,12 @@
   }
 
   &--video {
-    border-top: 75px solid white;
     height: 0;
     padding-top: 56.25%;
+
+    @include bpMinSmall {
+      border-top: 75px solid white;
+    }
   }
 
   &__img {
