--- a/src/components/globals/header/_header.scss
+++ b/src/components/globals/header/_header.scss
@@ -34,6 +34,7 @@
   &__logo {
     max-height: 100px;
     transition: max-height .2s;
+    max-width: 100%;
 
     @include bpMinSmall() {
       max-height: 160px;
